--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "rollup-plugin-uglify": "^6.0.0",
     "rollup-plugin-url": "^2.0.0",
     "style-loader": "^0.23.1"
-  }
+  },
+  "description": "A React wrapper for GrapesJS library",
+  "repository": "https://github.com/thanhtunguet/grapesjs-react",
+  "author": "Thanh Tùng <ht@thanhtunguet.info>"
 }
