--- a/.eslintrc
+++ b/.eslintrc
@@ -5,73 +5,51 @@
     "react",
     "import"
   ],
+  "env": {
+    "node": true,
+    "browser": true,
+    "es6": true,
+    "jest": true,
+    "commonjs": true
+  },
   "extends": [
+    "eslint:recommended",
+    "standard",
     "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:jsx-a11y/recommended",
+    "plugin:import/recommended"
   ],
   "rules": {
-    "flowtype/boolean-style": [
-      2,
-      "boolean"
+    "no-unused-expressions": "error",
+    "no-unused-labels": "error",
+    "semi": [
+      "error",
+      "always"
     ],
-    "flowtype/define-flow-type": 1,
-    "flowtype/delimiter-dangle": [
-      2,
-      "never"
-    ],
-    "flowtype/generic-spacing": [
-      2,
-      "never"
-    ],
-    "flowtype/no-primitive-constructor-types": 2,
-    "flowtype/no-types-missing-file-annotation": 2,
-    "flowtype/no-weak-types": 0,
-    "flowtype/object-type-delimiter": [
-      2,
-      "comma"
-    ],
-    "flowtype/require-parameter-type": 2,
-    "flowtype/require-return-type": [
-      0,
-      "always",
+    "space-before-function-paren": [
+      "error",
       {
-        "annotateUndefined": "never"
+        "anonymous": "always",
+        "named": "never",
+        "asyncArrow": "always"
       }
     ],
-    "flowtype/require-valid-file-annotation": 2,
-    "flowtype/semi": [
-      2,
-      "always"
-    ],
-    "flowtype/space-after-type-colon": [
-      2,
-      "always"
-    ],
-    "flowtype/space-before-generic-bracket": [
-      2,
-      "never"
-    ],
-    "flowtype/space-before-type-colon": [
-      2,
-      "never"
-    ],
-    "flowtype/type-id-match": [
-      2,
-      "^([A-Z][a-z0-9]+)+Type$"
-    ],
-    "flowtype/union-intersection-spacing": [
-      2,
-      "always"
-    ],
-    "flowtype/use-flow-type": 1,
-    "flowtype/valid-syntax": 1,
-    "no-unused-vars": "error",
-    "no-unused-expressions": "error",
-    "no-unused-labels": "error"
+    "comma-dangle": [
+      "error",
+      "always-multiline"
+    ]
   },
   "settings": {
     "flowtype": {
       "onlyFilesWithFlowAnnotation": false
+    },
+    "import/resolver": {
+      "node": {
+        "paths": [
+          "src",
+          "node_modules"
+        ]
+      }
     }
   }
 }
