--- a/package.json
+++ b/package.json
@@ -22,23 +22,6 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "rollup -c",
-    "watch": "rollup -c -w",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "peers": "npm-install-peers"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/plugin-external-helpers": "^7.0.0",
@@ -54,11 +37,17 @@
     "bootstrap": "^4.3.1",
     "eslint": "^5.6.1",
     "eslint-config-react-app": "^3.0.3",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
     "flow-bin": "^0.93.0",
+    "husky": "^1.3.1",
+    "jest": "^24.7.1",
     "node-sass": "^4.11.0",
     "npm-install-peers": "^1.2.1",
     "react-scripts": "2.0.4",
@@ -72,5 +61,26 @@
     "rollup-plugin-uglify": "^6.0.0",
     "rollup-plugin-url": "^2.0.0",
     "style-loader": "^0.23.1"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "husky": {
+    "pre-commit": "yarn lint"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "peers": "npm-install-peers",
+    "lint": "eslint --fix src/"
   }
 }
