--- a/package.json
+++ b/package.json
@@ -8,67 +8,43 @@
     "email": "ht@thanhtunguet.info"
   },
   "private": false,
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
+  "main": "dist/lib.js",
   "license": "MIT",
+  "devDependencies": {
+    "@storybook/addon-info": "^5.1.11",
+    "@storybook/cli": "^5.0.10",
+    "@storybook/react": "^5.0.10",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/storybook__react": "^4.0.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "husky": "^1.3.1",
+    "jest": "^24.9.0",
+    "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
+    "react-codemirror": "^1.0.0",
+    "react-docgen-typescript-loader": "^3.1.1",
+    "react-scripts": "2.0.4",
+    "style-loader": "^0.23.1",
+    "tslib": "^1.10.0",
+    "tslint": "^5.19.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.3"
+  },
   "dependencies": {
-    "grapesjs": "^0.14.33",
+    "antd": "^3.22.0",
+    "bootstrap": "^4.3.1",
+    "grapesjs": "^0.15.3",
     "grapesjs-blocks-basic": "^0.1.8",
     "grapesjs-custom-code": "^0.1.1",
     "grapesjs-plugin-ckeditor": "^0.0.9",
     "grapesjs-plugin-forms": "^1.0.1",
     "grapesjs-preset-newsletter": "^0.2.20",
-    "grapesjs-preset-webpage": "^0.1.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-external-helpers": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@coreui/coreui": "^2.1.7",
-    "@storybook/cli": "^5.0.10",
-    "@storybook/react": "^5.0.10",
-    "antd": "^3.13.6",
-    "babel-eslint": "9",
-    "babel-loader": "^8.0.4",
-    "bootstrap": "^4.3.1",
-    "eslint": "^5.6.1",
-    "eslint-config-react-app": "^3.0.3",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-standard": "^4.0.0",
-    "flow-bin": "^0.93.0",
-    "husky": "^1.3.1",
-    "jest": "^24.7.1",
-    "node-sass": "^4.11.0",
-    "npm-install-peers": "^1.2.1",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.0.4",
-    "reactstrap": "^7.1.0",
-    "rollup": "^0.66.4",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-includepaths": "^0.2.3",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-uglify": "^6.0.0",
-    "rollup-plugin-url": "^2.0.0",
-    "style-loader": "^0.23.1"
-  },
-  "peerDependencies": {
-    "react": "^16.8.6"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "grapesjs-preset-webpage": "^0.1.10",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "browserslist": [
     ">0.2%",
@@ -77,15 +53,18 @@
     "not op_mini all"
   ],
   "husky": {
-    "pre-commit": "yarn lint"
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   },
   "scripts": {
-    "build": "rollup -c",
-    "watch": "rollup -c -w",
+    "postinstall": "npm rebuild node-sass",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "peers": "npm-install-peers",
-    "lint": "eslint --fix src/",
-    "storybook": "start-storybook"
+    "lint": "tslint --fix --project .",
+    "storybook": "start-storybook -p 6006",
+    "build:storybook": "build-storybook -c .storybook -o docs/",
+    "watch": "tsc -w",
+    "build": "tsc"
   }
 }
