--- a/package.json
+++ b/package.json
@@ -11,21 +11,25 @@
   "main": "dist/lib.js",
   "license": "MIT",
   "devDependencies": {
-    "@storybook/addon-info": "^5.1.11",
-    "@storybook/cli": "^5.0.10",
-    "@storybook/react": "^5.0.10",
+    "@storybook/addon-info": "^5.2.1",
+    "@storybook/cli": "^5.2.1",
+    "@storybook/react": "^5.2.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/storybook__react": "^4.0.2",
+    "antd": "^3.22.0",
     "awesome-typescript-loader": "^5.2.1",
+    "bootstrap": "^4.3.1",
+    "grapesjs-react": "link:./src",
     "husky": "^1.3.1",
     "jest": "^24.9.0",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "react-codemirror": "^1.0.0",
     "react-docgen-typescript-loader": "^3.1.1",
+    "react-dom": "^16.10.1",
     "react-scripts": "2.0.4",
     "style-loader": "^0.23.1",
     "tslib": "^1.10.0",
@@ -34,8 +38,6 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "antd": "^3.22.0",
-    "bootstrap": "^4.3.1",
     "grapesjs": "^0.15.3",
     "grapesjs-blocks-basic": "^0.1.8",
     "grapesjs-custom-code": "^0.1.1",
@@ -43,8 +45,7 @@
     "grapesjs-plugin-forms": "^1.0.1",
     "grapesjs-preset-newsletter": "^0.2.20",
     "grapesjs-preset-webpage": "^0.1.10",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react": "^16.9.0"
   },
   "browserslist": [
     ">0.2%",
