--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,32 +3,29 @@
     "baseUrl": "src",
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
-    "module": "commonjs",
-    "target": "es5",
     "declaration": true,
-    "isolatedModules": false,
-    "types": [
-      "node",
-      "jest"
-    ],
+    "isolatedModules": true,
     "outDir": "dist",
     "sourceMap": true,
-    "jsx": "react"
+    "jsx": "react",
+    "lib": [
+      "dom",
+      "esnext"
+    ],
+    "typeRoots": [
+      "node_modules/@types/"
+    ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.{ts,tsx}"
   ],
   "exclude": [
-    "node_modules",
-    "dist",
-    "build",
-    "src/**.spec.ts",
-    "src/**.spec.tsx",
-    "src/**.test.ts",
-    "src/**.test.tsx"
+    "node_modules/",
+    "dist/",
+    "build/",
+    "src/**.{spec,test}.{ts,tsx}"
   ]
 }
