Add type definition

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "file-loader": "^4.2.0",
     "grapesjs-blocks-basic": "^0.1.8",
     "grapesjs-mjml": "^0.1.15",
+    "html-loader": "^0.5.5",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "markdown-loader": "^5.1.0",
     "node-sass": "^4.13.0",
     "react-codemirror": "^1.0.0",
     "react-docgen-typescript-loader": "^3.3.0",
