Add component definition

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grapesjs-react",
   "version": "3.0.0",
   "description": "React wrapper for GrapesJS",
-  "main": "dist/index.js",
+  "main": "dist/grapesjs-react.js",
   "repository": "https://github.com/thanhtunguet/grapesjs-react",
   "author": "Thanh Tùng <ht@thanhtunguet.info>",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "@types/react-dom": "^16.9.4",
     "antd": "^3.25.0",
     "awesome-typescript-loader": "^5.2.1",
+    "backbone": "^1.4.0",
     "bootstrap": "^4.3.1",
     "codemirror": "^5.49.2",
     "css-loader": "^3.2.0",
