--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,48 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "allowJs": false,
+    "allowSyntheticDefaultImports": true,
+    "allowUmdGlobalAccess": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "alwaysStrict": false,
+    "baseUrl": "src",
+    "checkJs": false,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react",
+    "lib": [
+      "dom",
+      "esnext"
+    ],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "outDir": "dist",
+    "removeComments": false,
+    "resolveJsonModule": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strictNullChecks": false,
+    "target": "es5",
     "typeRoots": [
       "node_modules/@types/"
-    ],
-    "declaration": true,
-    "isolatedModules": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "allowJs": false,
-    "moduleResolution": "node",
-    "outDir": "dist",
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "skipLibCheck": false,
-    "jsx": "react"
+    ]
   },
-  "include": [
-    "src/grapesjs-react.tsx",
-    "package.json"
-  ],
   "exclude": [
-    "node_modules",
-    "dist",
-    "build",
-    "src/**/*.{test,spec}.{ts,tsx}"
+    "build/",
+    "dist/",
+    "node_modules/"
+  ],
+  "include": [
+    "src/grapesjs-react.tsx"
   ]
 }
