--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -1,41 +1,38 @@
 {
   "compilerOptions": {
-    "outDir": "build",
-    "module": "commonjs",
-    "target": "es5",
+    "allowJs": false,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "src",
+    "declaration": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react",
     "lib": [
-      "es5",
-      "es6",
-      "es7",
-      "es2017",
+      "esnext",
       "dom"
     ],
-    "sourceMap": true,
-    "allowJs": false,
-    "jsx": "react",
+    "module": "commonjs",
     "moduleResolution": "node",
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "outDir": "build",
     "rootDirs": [
       "src"
     ],
-    "baseUrl": "src",
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
+    "sourceMap": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "target": "es5"
   },
-  "include": [
-    "src/**/*"
-  ],
   "exclude": [
-    "node_modules",
     "build",
+    "node_modules",
     "scripts"
+  ],
+  "include": [
+    "src/"
   ]
 }
