--- a/package.json
+++ b/package.json
@@ -2,69 +2,69 @@
   "name": "grapesjs-react",
   "version": "3.0.0",
   "description": "React wrapper for GrapesJS",
-  "main": "dist/grapesjs-react.js",
+  "main": "./dist/grapesjs-react.js",
   "repository": "https://github.com/thanhtunguet/grapesjs-react",
   "author": "Thanh Tùng <ht@thanhtunguet.info>",
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@storybook/addon-info": "^5.2.6",
-    "@storybook/cli": "^5.2.6",
-    "@storybook/core": "^5.2.6",
-    "@storybook/react": "^5.2.6",
+    "@storybook/cli": "^5.2.8",
+    "@storybook/react": "^5.2.8",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.3",
     "@types/bootstrap": "^4.3.1",
-    "@types/codemirror": "^0.0.80",
-    "@types/jest": "^24.0.22",
-    "@types/node": "^12.12.7",
-    "@types/react": "^16.9.11",
+    "@types/codemirror": "^0.0.81",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.17",
+    "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
-    "antd": "^3.25.0",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/reactstrap": "^8.2.0",
+    "@types/ts-nameof": "^4.2.0",
+    "antd": "^3.26.2",
     "awesome-typescript-loader": "^5.2.1",
-    "backbone": "^1.4.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "codemirror": "^5.49.2",
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
-    "grapesjs-blocks-basic": "^0.1.8",
-    "grapesjs-mjml": "^0.1.15",
-    "html-loader": "^0.5.5",
-    "husky": "^3.0.9",
-    "jest": "^24.9.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
-    "markdown-loader": "^5.1.0",
+    "css-loader": "^3.3.2",
+    "file-loader": "^5.0.2",
+    "husky": "^3.1.0",
     "node-sass": "^4.13.0",
-    "react-codemirror": "^1.0.0",
-    "react-docgen-typescript-loader": "^3.3.0",
-    "react-dom": "^16.11.0",
+    "react-codemirror2": "^6.0.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
-    "react3l-cli": "0.1.2",
-    "reactn": "^2.2.4",
-    "reactstrap": "^8.1.1",
+    "react-scripts": "^3.3.0",
+    "reactstrap": "^8.2.0",
+    "rollup": "^1.27.12",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-typescript": "^1.0.1",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "ts-jest": "^24.1.0",
+    "source-map-support": "^0.5.16",
+    "style-loader": "^1.0.1",
+    "ts-nameof": "^4.2.2",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2"
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.7.3",
+    "webpack-source-map-support": "^2.0.1"
   },
   "scripts": {
-    "build": "build-storybook -o build/",
     "build:lib": "tsc",
+    "watch:lib": "tsc -w",
     "start": "start-storybook -p 6006",
-    "watch": "tsc -w",
-    "publish": "cd dist && publish",
-    "tslint": "tslint --fix --project ."
+    "build": "build-storybook -o build/",
+    "lint": "tslint --fix src/**/*.{ts,tsx}",
+    "postinstall": "npm rebuild node-sass"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn tslint"
+      "pre-commit": "yarn lint"
     }
   },
   "dependencies": {
+    "grapesjs-mjml": "^0.1.15",
     "grapesjs-preset-newsletter": "^0.2.20",
     "grapesjs-preset-webpage": "^0.1.11",
     "grapesjs-react": "^2.0.2",
-    "react": "^16.11.0"
+    "react": "^16.12.0"
   }
 }
