--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/reactstrap": "^8.2.0",
+    "@types/source-map-support": "^0.5.0",
     "@types/ts-nameof": "^4.2.0",
+    "@typescript-eslint/parser": "^2.12.0",
     "antd": "^3.26.2",
     "awesome-typescript-loader": "^5.2.1",
     "bootstrap": "^4.4.1",
     "codemirror": "^5.49.2",
     "css-loader": "^3.3.2",
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-typescript": "^0.14.0",
     "file-loader": "^5.0.2",
     "husky": "^3.1.0",
     "node-sass": "^4.13.0",
@@ -34,9 +41,6 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "reactstrap": "^8.2.0",
-    "rollup": "^1.27.12",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript": "^1.0.1",
     "sass-loader": "^8.0.0",
     "source-map-support": "^0.5.16",
     "style-loader": "^1.0.1",
@@ -45,25 +49,28 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^4.1.0",
     "typescript": "^3.7.3",
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2",
     "webpack-source-map-support": "^2.0.1"
   },
-  "scripts": {
-    "build:lib": "tsc",
-    "watch:lib": "tsc -w",
-    "start": "start-storybook -p 6006",
-    "build": "build-storybook -o build/",
-    "lint": "tslint --fix src/**/*.{ts,tsx}",
-    "postinstall": "npm rebuild node-sass"
+  "dependencies": {
+    "grapesjs": "^0.15.9",
+    "grapesjs-mjml": "^0.1.15",
+    "grapesjs-preset-newsletter": "^0.2.20",
+    "grapesjs-preset-webpage": "^0.1.11",
+    "react": "^16.12.0"
   },
   "husky": {
     "hooks": {
       "pre-commit": "yarn lint"
     }
   },
-  "dependencies": {
-    "grapesjs-mjml": "^0.1.15",
-    "grapesjs-preset-newsletter": "^0.2.20",
-    "grapesjs-preset-webpage": "^0.1.11",
-    "react": "^16.12.0"
+  "scripts": {
+    "watch:lib": "NODE_ENV=development webpack --watch",
+    "build:lib": "NODE_ENV=production  webpack",
+    "start": "start-storybook -p 6006",
+    "build": "build-storybook -o build/",
+    "lint": "tslint --fix src/**/*.{ts,tsx}"
   }
 }
