--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "parser": "@typescript-eslint/parser",
   "plugins": [
     "react",
-    "react-hooks"
+    "react-hooks",
+    "jsx-a11y"
   ],
   "extends": [
     "eslint:recommended"
