--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     "target": "es5",
     "typeRoots": [
       "node_modules/@types/"
-    ]
+    ],
+    "strict": true
   },
   "exclude": [
     "build/",
