--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "grapesjs-react",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "React wrapper for GrapesJS",
   "main": "./dist/grapesjs-react.cjs.js",
   "module": "./dist/grapesjs-react.js",
+  "types": "./dist/grapesjs-react.d.ts",
   "homepage": "https://github.com/thanhtunguet/grapesjs-react/wiki",
   "repository": "https://github.com/thanhtunguet/grapesjs-react",
   "author": {
