Add storybook with sample code

--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,17 @@
-node_modules/
-.gitignore
-src/
+.git
 .github
+.gitignore
 .npmignore
 .storybook/
+node_modules/
 scripts/
+src/
+.editorconfig
+.eslintrc.js
 .travis.yml
+CNAME
 deploy_key.enc
 rollup.config.js
-yarn.lock
-tslint.json
 tsconfig.json
-CNAME
-.eslintrc
-.editorconfig
+yarn.lock
+*.log
