--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "grapesjs-react",
   "version": "3.0.4",
   "description": "React wrapper for GrapesJS",
-  "main": "./dist/grapesjs-react.cjs.js",
-  "module": "./dist/grapesjs-react.js",
-  "types": "./dist/grapesjs-react.d.ts",
+  "main": "./grapesjs-react.cjs.js",
+  "module": "./grapesjs-react.js",
+  "types": "./grapesjs-react.d.ts",
   "homepage": "https://github.com/thanhtunguet/grapesjs-react/wiki",
   "repository": "https://github.com/thanhtunguet/grapesjs-react",
   "author": {
@@ -14,72 +14,6 @@
   },
   "license": "MIT",
   "private": false,
-  "devDependencies": {
-    "@storybook/cli": "^5.2.8",
-    "@storybook/react": "^5.2.8",
-    "@svgr/rollup": "^5.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.3",
-    "@types/bootstrap": "^4.3.1",
-    "@types/codemirror": "^0.0.81",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.17",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/reactstrap": "^8.2.0",
-    "@types/source-map-support": "^0.5.0",
-    "@types/ts-nameof": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.12.0",
-    "antd": "^3.26.8",
-    "awesome-typescript-loader": "^5.2.1",
-    "bootstrap": "^4.4.1",
-    "css-loader": "^3.3.2",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "file-loader": "^5.0.2",
-    "husky": "^3.1.0",
-    "node-sass": "^4.13.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "reactstrap": "^8.2.0",
-    "rollup": "^1.31.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-dts": "^1.2.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-plugin-postcss": "^2.0.6",
-    "rollup-plugin-typescript2": "^0.25.3",
-    "rollup-plugin-url": "^3.0.1",
-    "sass-loader": "^8.0.0",
-    "source-map-support": "^0.5.16",
-    "style-loader": "^1.0.1",
-    "ts-nameof": "^4.2.2",
-    "tslint": "^5.20.1",
-    "tslint-react": "^4.1.0",
-    "typescript": "^3.7.3"
-  },
-  "dependencies": {
-    "grapesjs": "^0.15.9",
-    "grapesjs-mjml": "^0.1.15",
-    "grapesjs-preset-newsletter": "^0.2.20",
-    "grapesjs-preset-webpage": "^0.1.11",
-    "react": "^16.12.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint"
-    }
-  },
   "scripts": {
     "watch:lib": "rollup -c -w",
     "build:lib": "rollup -c",
@@ -89,5 +23,45 @@
     "lint": "tslint --fix src/**/*.{ts,tsx} && eslint --fix src/**/*",
     "test": "react-scripts test",
     "test:ci": "CI=true react-scripts test --watchAll=false"
+  },
+  "dependencies": {
+    "grapesjs": "^0.15.9",
+    "grapesjs-mjml": "^0.1.15",
+    "grapesjs-preset-newsletter": "^0.2.20",
+    "grapesjs-preset-webpage": "^0.1.11",
+    "react": "^16.12.0"
+  },
+  "devDependencies": {
+    "@storybook/cli": "^5.3.19",
+    "@storybook/preset-create-react-app": "^3.1.3",
+    "@storybook/react": "^5.3.19",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.3",
+    "@types/bootstrap": "^4.3.1",
+    "@types/codemirror": "^0.0.81",
+    "@types/jest": "^26.0.3",
+    "@types/node": "^12.12.17",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/reactstrap": "^8.2.0",
+    "@types/source-map-support": "^0.5.0",
+    "@types/ts-nameof": "^4.2.0",
+    "antd": "^3.26.8",
+    "bootstrap": "^4.4.1",
+    "css-loader": "^3.3.2",
+    "file-loader": "^5.0.2",
+    "node-sass": "^4.13.0",
+    "react-codemirror2": "^7.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "react3l-cli": "^0.4.0",
+    "sass-loader": "^8.0.0",
+    "source-map-support": "^0.5.16",
+    "style-loader": "^1.0.1",
+    "ts-nameof.macro": "^4.2.2",
+    "typescript": "^3.9.6"
   }
 }
