--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grapesjs-react",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "React wrapper for GrapesJS",
   "main": "./grapesjs-react.cjs.js",
   "module": "./grapesjs-react.js",
@@ -25,44 +25,45 @@
     "test": "react-scripts test",
     "test:ci": "CI=true react-scripts test --watchAll=false"
   },
-  "dependencies": {
-    "grapesjs": "^0.15.9",
-    "grapesjs-mjml": "^0.1.15",
-    "grapesjs-preset-newsletter": "^0.2.20",
-    "grapesjs-preset-webpage": "^0.1.11",
-    "react": "^16.12.0"
+  "peerDependencies": {
+    "grapesjs": "*",
+    "grapesjs-mjml": "*",
+    "grapesjs-preset-newsletter": "*",
+    "grapesjs-preset-webpage": "*",
+    "react": "*",
+    "react-dom": "*"
   },
   "devDependencies": {
-    "@storybook/cli": "^5.3.19",
-    "@storybook/preset-create-react-app": "^3.1.3",
-    "@storybook/react": "^5.3.19",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.3",
-    "@types/bootstrap": "^4.3.1",
-    "@types/codemirror": "^0.0.81",
-    "@types/jest": "^26.0.3",
-    "@types/node": "^12.12.17",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/reactstrap": "^8.2.0",
-    "@types/source-map-support": "^0.5.0",
-    "@types/ts-nameof": "^4.2.0",
-    "antd": "^3.26.8",
-    "bootstrap": "^4.4.1",
-    "css-loader": "^3.3.2",
-    "file-loader": "^5.0.2",
-    "node-sass": "^4.13.0",
+    "@storybook/cli": "^6.1.21",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.1.21",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@types/bootstrap": "^5.0.9",
+    "@types/codemirror": "^0.0.108",
+    "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-router": "^5.1.12",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/reactstrap": "^8.7.2",
+    "@types/ts-nameof": "^4.2.1",
+    "antd": "^4.14.0",
+    "bootstrap": "^4.6.0",
+    "codemirror": "^5.59.4",
+    "css-loader": "^5.1.3",
+    "file-loader": "^6.2.0",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
+    "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "react3l-cli": "^0.4.0",
-    "sass-loader": "^8.0.0",
-    "source-map-support": "^0.5.16",
-    "style-loader": "^1.0.1",
+    "react-scripts": "^4.0.3",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "ts-nameof.macro": "^4.2.2",
-    "typescript": "^3.9.6"
+    "typescript": "^4.2.3"
   }
 }
