--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,42 @@
-.idea/
-.vscode/
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-build/
-dist/
-deploy_key
-node_modules/
-yarn.lock
+# compiled output
+/dist
+/tmp
+/out-tsc
+
+# dependencies
+/node_modules
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
 yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
+
+# TSConfig for IDE
+/tsconfig.json
