--- a/package.json
+++ b/package.json
@@ -1,69 +1,87 @@
 {
   "name": "grapesjs-react",
-  "version": "3.1.2",
-  "description": "React wrapper for GrapesJS",
-  "main": "./grapesjs-react.cjs.js",
-  "module": "./grapesjs-react.js",
-  "types": "./grapesjs-react.d.ts",
-  "homepage": "https://github.com/thanhtunguet/grapesjs-react/wiki",
-  "repository": "https://github.com/thanhtunguet/grapesjs-react",
-  "author": {
-    "name": "Thanh Tùng",
-    "email": "ht@thanhtunguet.info",
-    "url": "https://github.com/thanhtunguet"
-  },
+  "version": "0.0.0",
   "license": "MIT",
-  "private": false,
   "scripts": {
-    "watch:lib": "tsc -w",
-    "build:lib": "tsc",
-    "prebuild:lib": "rm -rf dist/",
-    "postbuild:lib": "cp package.json README.md src/*.d.ts dist/",
-    "start": "start-storybook -p 6006",
-    "build": "build-storybook -o build/",
-    "lint": "tslint --fix src/**/*.{ts,tsx} && eslint --fix src/**/*",
-    "test": "react-scripts test",
-    "test:ci": "CI=true react-scripts test --watchAll=false"
+    "nx": "nx",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "lint": "nx workspace-lint && nx lint",
+    "e2e": "nx e2e",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "format": "nx format:write",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "update": "nx migrate latest",
+    "workspace-generator": "nx workspace-generator",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help"
   },
-  "peerDependencies": {
-    "grapesjs": "*",
-    "grapesjs-mjml": "*",
-    "grapesjs-preset-newsletter": "*",
-    "grapesjs-preset-webpage": "*",
-    "react": "*",
-    "react-dom": "*"
+  "private": true,
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@storybook/cli": "^6.1.21",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.1.21",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@types/bootstrap": "^5.0.9",
-    "@types/codemirror": "^0.0.108",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-router": "^5.1.12",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/reactstrap": "^8.7.2",
-    "@types/ts-nameof": "^4.2.1",
-    "antd": "^4.14.0",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
+    "@babel/preset-typescript": "7.9.0",
+    "@nrwl/angular": "^11.6.1",
+    "@nrwl/cli": "11.6.1",
+    "@nrwl/eslint-plugin-nx": "11.6.1",
+    "@nrwl/jest": "11.6.1",
+    "@nrwl/linter": "11.6.1",
+    "@nrwl/node": "^11.6.1",
+    "@nrwl/react": "^11.6.1",
+    "@nrwl/storybook": "11.6.1",
+    "@nrwl/tao": "11.6.1",
+    "@nrwl/web": "11.6.1",
+    "@nrwl/workspace": "11.6.1",
+    "@storybook/addon-knobs": "^6.1.11",
+    "@storybook/react": "^6.1.11",
+    "@svgr/webpack": "^5.4.0",
+    "@testing-library/react": "11.1.2",
+    "@types/jest": "26.0.8",
+    "@types/node": "14.14.33",
+    "@types/react": "16.9.56",
+    "@types/react-dom": "16.9.9",
+    "@types/webpack": "4.41.21",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "antd": "^4.15.0",
+    "babel-jest": "26.2.2",
+    "babel-loader": "8.1.0",
     "bootstrap": "^4.6.0",
-    "codemirror": "^5.59.4",
-    "css-loader": "^5.1.3",
-    "file-loader": "^6.2.0",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.1",
-    "react-codemirror2": "^7.2.1",
-    "react-dom": "^17.0.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "ts-nameof.macro": "^4.2.2",
-    "typescript": "^4.2.3"
+    "dotenv": "8.2.0",
+    "eslint": "7.10.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "grapesjs": "^0.16.45",
+    "grapesjs-blocks-basic": "^0.1.8",
+    "grapesjs-mjml": "^0.5.2",
+    "grapesjs-preset-newsletter": "^0.2.20",
+    "grapesjs-preset-webpage": "^0.1.11",
+    "jest": "26.2.2",
+    "prettier": "2.2.1",
+    "ts-jest": "26.4.0",
+    "ts-node": "~9.1.1",
+    "typescript": "~4.0.3",
+    "url-loader": "^3.0.0"
   }
 }
