--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "gh-pages": "^3.1.0",
     "grapesjs": "^0.16.45",
     "grapesjs-blocks-basic": "^0.1.8",
     "grapesjs-mjml": "^0.5.2",
