--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grapesjs-react",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "React wrapper for GrapesJS",
   "main": "./grapesjs-react.cjs.js",
   "module": "./grapesjs-react.js",
@@ -15,8 +15,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "watch:lib": "tsc -w",
-    "build:lib": "tsc",
+    "watch:lib": "tsc -w --noEmit false",
+    "build:lib": "tsc --noEmit false",
     "prebuild:lib": "rm -rf dist/",
     "postbuild:lib": "cp package.json README.md src/*.d.ts dist/",
     "start": "start-storybook -p 6006",
@@ -27,9 +27,6 @@
   },
   "peerDependencies": {
     "grapesjs": "*",
-    "grapesjs-mjml": "*",
-    "grapesjs-preset-newsletter": "*",
-    "grapesjs-preset-webpage": "*",
     "react": "*",
     "react-dom": "*"
   },
@@ -45,25 +42,26 @@
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
-    "@types/react-router": "^5.1.12",
     "@types/react-router-dom": "^5.1.7",
     "@types/reactstrap": "^8.7.2",
-    "@types/ts-nameof": "^4.2.1",
     "antd": "^4.14.0",
+    "babel-loader": "8.1.0",
     "bootstrap": "^4.6.0",
     "codemirror": "^5.59.4",
     "css-loader": "^5.1.3",
     "file-loader": "^6.2.0",
+    "grapesjs": "^0.16.45",
+    "grapesjs-mjml": "^0.5.2",
+    "grapesjs-preset-newsletter": "^0.2.20",
+    "grapesjs-preset-webpage": "^0.1.11",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
-    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "ts-nameof.macro": "^4.2.2",
     "typescript": "^4.2.3"
   }
 }
